livro/pod-api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-api
spec:
  containers:
  - image: rogeriotadim/simple-node-api:1.0.0
    name: simple-node-api
    ports:
    - containerPort: 8080
    resources:
      requests:
        cpu: "10m"
        memory: "32M"
      limits:
        cpu: "20m"
        memory: "64M"
