livro/pod-mongo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb-pod
spec:
  containers:
  - image: mongo
    name: mongodb
    ports:
    - containerPort: 27017
    resources:
      requests:
        cpu: "20m"
        memory: "128M"
      limits:
        cpu: "250m"
        memory: "256M"
