livro/pod-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-api
  name: pod-api-svc
spec:
  ports:
  - port: 8085
    protocol: TCP
    targetPort: posta-api
  selector:
    app: simple-api
  sessionAffinity: None
  type: NodePort
