livro/ing-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ing
spec:
  containers:
  - image: rogeriotadim/simple-node-api:1.0.0
    name: simple-node-api
    env:
    - name: "PORT"
      value: "8080"
    ports:
    - containerPort: 8080
    resources:
      requests:
        cpu: "10m"
        memory: "32M"
      limits:
        cpu: "20m"
        memory: "64M"
